@@ -135,6 +135,8 @@
 #define DEFAULT_CACHE_METADATA_FORMAT CACHE_METADATA_FORMAT_UNSELECTED /* Autodetect */
 #define DEFAULT_CACHE_MODE "writethrough"
 
+#define DEFAULT_FSADM_PATH FSADM_PATH
+
 #define DEFAULT_UMASK 0077
 
 #define DEFAULT_FORMAT "lvm2"
